--- a/1.html
+++ b/1.html
@@ -1,56 +1,19 @@
-Hello Web!
+<!doctype html>
 <html>
 <head>
-<title>Web1-html</title>
-WEB
-<h1>HTML</h1>
-<meta charset="utf-8">
+  <title>WEB - CSS</title>
+  <meta charset="utf-8">
 </head>
 <body>
-  <p><a href="https://opentutorials.org/course/3084/18890" target="_blank"> <h1>생활코딩</h1></a></p>
-HTML이란 무엇인가?
-먼저 예제를 보자... 그리고 예제를 복사하여 우리의 에디터에 붙여넣기를 해 봅시다.
-추론을 통하여 h1이 무엇인지 추론해 보는 것이 좋다.
-h 뒤에는 숫자가 나오는구나...
-[설명] heading
-<h1>통계에 기반한 학습</h1>
-<h2>https://www.advancedwebranking.com/html/<h2>
-<h3>The average web page</h3>
-통계 -tag 사용 빈도 -총 tag 150+
-Modern Chinese Character Frequency List
----
-<h2>HTML Paragraphs</h2>
-
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p><p>
-  <a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_paragraphs1" target="_blank"
-link-1</a></p>
-br tag vs p tryhtml_paragraphs1
-css 문법
-<p style="margin-top:45px;">여기서 css문법은 다음에...</p>
-
-<h1>HTML이 중요한 이유</h1>
-검색엔진에 적합한 형태의 글을 만들어야 함
-
-<h1>최후의 문법 속성과 img</h1>
-
-<img width=30% src="C:\Users\User\Desktop\web1\coding1.png">
-코딩 그림 넣기
-<h1>부모 자식과 목록</h1>
-<ul>
-  <li>1. HTML</li>
-  <li>2. css </li>
-  <li>3. JavaScript </li>
-
-<h1>문서의 구조와 슈퍼스타들</h1>
-문장 완성 ---페이지---책 --표지
-
-<h1>HTML 태그의 제왕</h1>
-
-
-
-
-
-
-
-</body>
+  <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+  <ol>
+    <li><a href="1.html"><font color="red">HTML</font></a></li>
+    <li><a href="2.html"><font color="red">CSS</font></a></li>
+    <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+  </ol>
+  <h2>CSS</h2>
+  <p>
+    Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language.[1] Although most often used to set the visual style of web pages and user interfaces written in HTML and XHTML, the language can be applied to any XML document, including plain XML, SVG and XUL, and is applicable to rendering in speech, or on other media. Along with HTML and JavaScript, CSS is a cornerstone technology used by most websites to create visually engaging webpages, user interfaces for web applications, and user interfaces for many mobile applications.
+  </p>
+  </body>
+  </html>
